Update issue templates

--- a/.github/ISSUE_TEMPLATE/เสนอไอเดีย-ฟีเจอร์ใหม่.md
+++ b/.github/ISSUE_TEMPLATE/เสนอไอเดีย-ฟีเจอร์ใหม่.md
@@ -7,7 +7,7 @@ assignees: ''
 
 ---
 
-### ✨ เสนอไอเดีย/ฟีเจอร์ใหม่ (Feature Request)
+### ✨ เสนอไอเดีย/ฟีเจอร์ใหม่
 
 **อยากให้เพิ่ม/ปรับปรุงอะไร?**
 อธิบายไอเดียของคุณสั้นๆ ว่าอยากให้ทำอะไร
